--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,14 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "~5.0",
-        "smalot/pdfparser": "*"
+        "smalot/pdfparser": "*",
+        "elibyy/tcpdf-laravel": "5.4.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7"
+        "phpunit/phpunit": "~5.7",
+		"anouar/fpdf": "1.0.2"
     },
     "autoload": {
         "classmap": [
