--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,12 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "elibyy/tcpdf-laravel": "5.4.*",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "~5.0",
-        "smalot/pdfparser": "*",
-        "elibyy/tcpdf-laravel": "5.4.*"
+        "phpoffice/phpword": "^0.13.0",
+        "smalot/pdfparser": "*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
