--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": ["app/Http/helperts.php"]
     },
     "autoload-dev": {
         "psr-4": {
